pirappdevback.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment-dev
  namespace: pirapp-dev  # Specify the namespace here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: sathish8329/stagepirappback:v4
        ports:
        - containerPort: 8000


---

apiVersion: v1
kind: Service
metadata:
  name: pirapp-api-service-dev
  namespace: pirapp-dev  # Specify the namespace here
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
