pirappdevfront.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: pirapp-dev  # Specify the namespace here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: new-kovaionai-ng
      containers:
      - name: frontend
        image: sathish8329/stagepirappfront:1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pirapp-frontend-service-dev
  namespace: pirapp-dev  # Specify the namespace here
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
